<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putih"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:layout_centerInParent="true"
        android:padding="@dimen/_20sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView

            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo_saktoko_flash"
            android:src="@drawable/ic_saktoko" />
        <TextView
            android:layout_marginEnd="7dp"
            android:textColor="@color/abu_abu"
            android:textSize="@dimen/_20sdp"
            android:fontFamily="@font/gothic_bold_italic"
            android:textAlignment="textEnd"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/banner"
            android:src="@drawable/banner_login" />


        <TextView
            android:textSize="@dimen/_14sdp"
            android:textAlignment="center"
            android:fontFamily="@font/gothic_regular"
            android:text="@string/silahkan_masukkan_no_terdaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:textAlignment="center"
            android:fontFamily="@font/gothic_italic"
            android:text="@string/contoh_no_hp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView

            android:labelFor="@id/etNoHP"
            android:fontFamily="@font/gothic_regular"
            android:text="@string/nomor_hp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:fontFamily="@font/gothic_regular"
            android:inputType="phone"
            android:layout_marginTop="@dimen/_5sdp"
            android:id="@+id/etNoHP"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no" />
        <TextView
            android:id="@+id/tverrorHP"
            android:textColor="@color/putih"
            android:fontFamily="@font/gothic_italic"
            android:textSize="@dimen/_8sdp"
            android:text="@string/silahkanmasukkannohp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_btn_putih_border"
            app:mrl_rippleAlpha="0.5"
            app:mrl_rippleColor="@color/white"
            app:mrl_rippleDelayClick="false"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="54dp">

                <TextView
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/gothic_bold"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@color/abu_abu" />
            </RelativeLayout>

        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/progressbar_animasi"
        android:id="@+id/loading"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"/>

</RelativeLayout>