<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.WellcomeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/banner"
            android:src="@drawable/banner_wellcome" />

        <TextView
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/abu_abu"
            android:fontFamily="@font/gothic_bold_italic"
            android:text="@string/selamat_datang"
            android:textSize="@dimen/_15ssp" />

        <ImageView
            android:layout_marginTop="-5dp"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_45sdp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo_saktoko_flash"
            android:src="@drawable/ic_saktoko" />

        <TextView
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gothic_regular"
            android:text="@string/deskripsi_saktoko"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:textColor="@color/abu_abu"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gothic_bold_italic"
            android:text="@string/silahkan_login_atau_register"
            android:textSize="@dimen/_12ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_putih_border"
                app:mrl_rippleAlpha="0.5"
                app:mrl_rippleColor="@color/white"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="54dp">

                    <TextView
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/gothic_bold"
                        android:text="@string/login"
                        android:textAllCaps="true"
                        android:textColor="@color/abu_abu" />
                </RelativeLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_putih_border"
                app:mrl_rippleAlpha="0.5"
                app:mrl_rippleColor="@color/white"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="54dp">

                    <TextView
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/gothic_bold"
                        android:text="@string/registrasi"
                        android:textAllCaps="true"
                        android:textColor="@color/abu_abu" />
                </RelativeLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>