<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SplashScreenActivity">

    <ImageView
        android:adjustViewBounds="true"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_saktoko_full"
        android:layout_width="200dp"
        android:contentDescription="@string/logo_saktoko_flash"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="center"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/menunggu_sambungan_ke_server"
            android:id="@+id/tvStatusKoneksi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="true"
            android:fontFamily="@font/gothic_bold"
            android:textColor="#B3C5D6"
            android:textSize="@dimen/_10ssp" />
        <com.balysv.materialripple.MaterialRippleLayout
            android:visibility="gone"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/btnRefresh"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_24sdp"
            android:background="@drawable/bg_btn_merah"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleColor="@color/white"
            app:mrl_rippleAlpha="0.5"
            app:mrl_rippleDelayClick="false"
            app:mrl_rippleHover="true">

            <TextView
                android:textAllCaps="true"
                android:fontFamily="@font/poppinsmedium"
                android:layout_marginTop="@dimen/_1sdp"
                android:letterSpacing="0.1"
                android:textSize="@dimen/_11ssp"
                android:layout_gravity="center"
                android:text="@string/sambung_ulang"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>
</RelativeLayout>